@startuml
scale 1

class Agent {
    +action_wrapper: ActionWrapper
    +model: object
    +reward_builder: object
    +state_builder: object
    
    +learn()
    +play()
    +reset()
    +step()
}

class GenericAgent {
}

class SC2Agent {
}

class LearningModel {
    +state_builder: object
    +reward_builder: object

    +choose_action()
    +learn()
    +load()
    +predict()
    +save()
}

class RewardBuilder {
    +get_reward()
}

Agent <|-- GenericAgent
Agent <|-- SC2Agent

LearningModel *-- Agent

RewardBuilder *-- Agent

@enduml